--- a/persona3.html
+++ b/persona3.html
@@ -73,7 +73,7 @@
         <p>Retired, Head of Homeowner's Association, Volunteer Coordinator</p>
 
         <h3>About Margarette:</h3>
-        <p>Margarette is an outspoken community advocate who loves baking and organizing functions and parties for her volunteering organization. In her down time, she enjoys knitting and being with her grandchildren. She suffers from arthritis, but she doesn't let that stop her from living her best life.</p>
+        <p>Margarette is an outspoken community advocate who loves baking and organizing parties for her volunteering organization. In her down time, she enjoys knitting and being with her grandchildren. She suffers from arthritis, but she doesn't let that stop her from living her best life.</p>
 
       </div>
     </div>
