--- a/persona1.html
+++ b/persona1.html
@@ -95,7 +95,7 @@
         <ul>
             <li>Low self-esteem</li>
             <li>Lonely</li>
-            <li>Doesn't know where to find volunteer opportunities and meet people</li>
+            <li>Doesn't know where to find volunteer opportunities and meet people//changed</li>
         </ul>
     </div>
 
