made changes on the persona page links for the navigation bar on persona3.html

--- a/persona3.html
+++ b/persona3.html
@@ -55,9 +55,9 @@
   <body>
     <nav>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="./persona1">Persona 1</a></li>
-        <li><a href="./persona2">Persona 2</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="persona1.html">Persona 1</a></li>
+        <li><a href="persona2.html">Persona 2</a></li>
         <li><a class="active" href="./persona3.html">Persona 3</a></li>
       </ul>
     </nav>
