added working links

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 	
 	<body>
 			<ul>
-				<li><a class="active" href="#home">Home</a></li>
-				<li><a href="#persona1">Persona 1</a></li>
-				<li><a href="#person2">Persona 2</a></li>
-				<li><a href="#persona3">Persona 3</a></li>
+				<li><a class="active" href="index.html">Home</a></li>
+				<li><a href="persona1.html">Persona 1</a></li>
+				<li><a href="person2.html">Persona 2</a></li>
+				<li><a href="persona3.html">Persona 3</a></li>
 			</ul>
 			
 			<h1>Homepage</h1>
