--- a/persona2.html
+++ b/persona2.html
@@ -53,10 +53,10 @@
 	<body>
 		<div id="navbar">
 			<ul>
-				<li><a href="#home">Home</a></li>
-				<li><a href="#persona1">Persona 1</a></li>
-				<li><a class="active" href="#person2">Persona 2</a></li>
-				<li><a href="#persona3">Persona 3</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="persona1.html">Persona 1</a></li>
+				<li><a class="active" href="person2.html">Persona 2</a></li>
+				<li><a href="persona3.html">Persona 3</a></li>
 			</ul>
 		</div>
 		<div id="content">
