--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 	</head>
 	
 	<body>
+			<h3>Eric was here</h3>
 			<ul>
 				<li><a class="active" href="#home">Home</a></li>
 				<li><a href="#persona1">Persona 1</a></li>
@@ -58,6 +59,8 @@
 				<li>Too many isolated volunteer resources online, but few consolidate every local volunteer resource into one site</li>
 				<li>Current volunteer sites are difficult to navigate</li>				
 			</ol>	
+			
+			
 	</body>
 
 </html>
