added we all love cst

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 				<li>Current volunteer sites are difficult to navigate</li>				
 			</ol>
 			Vicky loves bees!	
+			We all love CST!
 	</body>
 
 </html>
