--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li>No way to determine the legitimacy of volunteer opportunities</li>
                 <li>Hard to keep track of volunteer hours and schedule</li>
                 <li>Too many isolated volunteer resources online, but few consolidate every local volunteer resource into one site</li>
-                <li>Current volunteer sites are difficult to navigate</li               
+                <li>Current volunteer sites are difficult to navigate</li>             
             </ol> 
     </body>
 </html>
